# ai-exercises

./: .env.example  .gitignore  Cargo.toml
playground/: Cargo.toml
playground/examples/: 0001.API接口测试.http  0001_deepseek_http.rs  0001_deepseek_rest.http  0002_deepseek_stream_http.rs  0003_deepseek_stream_http.rs  0004.openai_rest.http  0004_openai_http.rs  0005_openai_response.rs  0006_async_opanai_http.rs  0007_async_opanai_response.rs  0008_async_opanai_response_image.rs  0009_async_opanai_chat_image.rs  0010_async_openai_error_handling.rs  0011.axum_llm_rest.http  0011_async_openai_advanced_usage.rs  0012_react_agent_cal.rs  0013_react_agent_cal_responses.rs  0014_validator_tool_call.rs  0015_validator_tool_call_basemodel.rs  0016_typeshift_tool_call.rs  0017_json_output.rs  0018_json_output_responses.rs  DeepSeek API 非流式响应接口测试.http
