[workspace]
members = ["playground"]

[package]
name = "ai-exercises"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "ai-exercises-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["stream"] }
dotenvy = "0.15"
futures-util = "0.3"
env_logger = "0.11"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2.0"

[dependencies]

[[bin]]
name = "ai-exercises-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
