[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fasteval = "0.2.4"
reqwest = { workspace = true }
futures-util = { workspace = true }
base64 = "0.22"
thiserror = { workspace = true }
async-openai = { workspace = true, features = ["chat-completion", "responses"] }
axum = "0.8.9"
